--- a/src/poiupv/vistes/Principal.fxml
+++ b/src/poiupv/vistes/Principal.fxml
@@ -2,23 +2,28 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.QuadCurve?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <VBox alignment="CENTER" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.PrincipalController">
    <children>
-      <SplitPane dividerPositions="0.5" orientation="VERTICAL" VBox.vgrow="ALWAYS">
+      <SplitPane dividerPositions="0.5373900293255132" orientation="VERTICAL" VBox.vgrow="ALWAYS">
         <items>
             <HBox alignment="CENTER">
                <children>
@@ -42,9 +47,62 @@
                               <Insets top="5.0" />
                            </VBox.margin>
                         </Label>
+                        <HBox alignment="CENTER_LEFT">
+                           <children>
+                              <ToggleButton fx:id="botoPunt" mnemonicParsing="false">
+                                 <graphic>
+                                    <Circle radius="7.0" stroke="BLACK" strokeType="INSIDE" />
+                                 </graphic>
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </ToggleButton>
+                              <Button fx:id="botoLine" mnemonicParsing="false">
+                                 <graphic>
+                                    <Line endX="100.0" startX="111.29290771484375" startY="13.292892456054688" />
+                                 </graphic>
+                                 <HBox.margin>
+                                    <Insets left="10.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button fx:id="botoArco" mnemonicParsing="false">
+                                 <graphic>
+                                    <QuadCurve controlX="-37.333335876464844" controlY="-26.66669464111328" endX="-24.000001907348633" endY="-1.71661376953125E-5" fill="WHITE" startX="-50.0" stroke="BLACK" strokeType="INSIDE" />
+                                 </graphic>
+                                 <HBox.margin>
+                                    <Insets left="10.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button fx:id="botoText" mnemonicParsing="false" text="T">
+                                 <HBox.margin>
+                                    <Insets bottom="5.0" left="10.0" top="5.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="Baskerville Old Face" size="14.0" />
+                                 </font>
+                              </Button>
+                              <ColorPicker fx:id="colorPalet" editable="true">
+                                 <HBox.margin>
+                                    <Insets left="10.0" />
+                                 </HBox.margin>
+                              </ColorPicker>
+                              <VBox alignment="CENTER">
+                                 <children>
+                                    <Slider fx:id="grosor" max="15.0" min="3.0" prefHeight="14.0" prefWidth="70.0" value="3.0" />
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Tamany" />
+                                 </children>
+                                 <HBox.margin>
+                                    <Insets bottom="5.0" left="10.0" top="5.0" />
+                                 </HBox.margin>
+                              </VBox>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </HBox>
                      </children>
                      <HBox.margin>
-                        <Insets bottom="10.0" left="20.0" right="15.0" top="20.0" />
+                        <Insets left="20.0" right="15.0" top="20.0" />
                      </HBox.margin>
                   </VBox>
                   <Button fx:id="validarResposta" alignment="CENTER" ellipsisString="Validar" mnemonicParsing="false" onAction="#respostaCorrecta" text="Validar" HBox.hgrow="ALWAYS">
@@ -54,34 +112,28 @@
                   </Button>
                </children>
             </HBox>
-            <SplitPane dividerPositions="0.13957934990439771" orientation="VERTICAL">
-              <items>
-                  <HBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="1058.0">
+            <ScrollPane fx:id="map_scrollpane" onMouseMoved="#muestraPosicion">
+               <content>
+                  <Pane focusTraversable="true" onMousePressed="#MousePressed">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Barra de herramientas" />
+                        <ImageView fx:id="cartaNautica" fitHeight="1500.0" fitWidth="1500.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../resources/carta_nautica.jpg" />
+                           </image>
+                        </ImageView>
                      </children>
-                  </HBox>
-                  <ScrollPane fx:id="map_scrollpane" onMouseMoved="#muestraPosicion">
-                     <content>
-                        <Pane focusTraversable="true">
-                           <children>
-                              <ImageView fx:id="cartaNautica" fitHeight="1500.0" fitWidth="1500.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../resources/carta_nautica.jpg" />
-                                 </image>
-                              </ImageView>
-                           </children>
-                        </Pane>
-                     </content>
-                  </ScrollPane>
-              </items>
-            </SplitPane>
+                  </Pane>
+               </content>
+            </ScrollPane>
         </items>
       </SplitPane>
-      <HBox alignment="CENTER_RIGHT" VBox.vgrow="ALWAYS">
+      <HBox alignment="CENTER_LEFT" VBox.vgrow="ALWAYS">
          <children>
             <Label fx:id="posicion" text="SceneX:     ScenY:     " wrapText="true" HBox.hgrow="ALWAYS" />
-            <Region prefHeight="0.0" prefWidth="45.0" />
+            <Region prefHeight="25.0" prefWidth="94.0" HBox.hgrow="ALWAYS">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin></Region>
             <Label text="Zoom">
                <opaqueInsets>
                   <Insets />
@@ -93,7 +145,7 @@
                <HBox.margin>
                   <Insets right="5.0" />
                </HBox.margin></Button>
-            <Slider fx:id="zoom_slider" HBox.hgrow="SOMETIMES">
+            <Slider fx:id="zoom_slider" prefHeight="14.0" prefWidth="251.0" HBox.hgrow="ALWAYS">
                <HBox.margin>
                   <Insets right="5.0" />
                </HBox.margin></Slider>
