--- a/src/poiupv/vistes/Principal.fxml
+++ b/src/poiupv/vistes/Principal.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.PrincipalController">
+<VBox alignment="CENTER" prefHeight="671.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.PrincipalController">
    <children>
       <SplitPane dividerPositions="0.5373900293255132" orientation="VERTICAL" VBox.vgrow="ALWAYS">
         <items>
@@ -86,6 +86,11 @@
                                     <Insets left="10.0" />
                                  </HBox.margin>
                               </ColorPicker>
+                              <Button fx:id="botoTransportador" mnemonicParsing="false" text="Transportador º">
+                                 <HBox.margin>
+                                    <Insets left="10.0" />
+                                 </HBox.margin>
+                              </Button>
                               <VBox alignment="CENTER">
                                  <children>
                                     <Slider fx:id="grosor" max="15.0" min="3.0" prefHeight="14.0" prefWidth="70.0" value="3.0" />
@@ -119,6 +124,11 @@
                         <ImageView fx:id="cartaNautica" fitHeight="1500.0" fitWidth="1500.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../resources/carta_nautica.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="transportador" fitHeight="400.0" fitWidth="400.0" focusTraversable="true" layoutX="180.0" layoutY="99.0" opacity="0.6" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../resources/transportador.png" />
                            </image>
                         </ImageView>
                      </children>
