--- a/src/poiupv/vistes/Principal.fxml
+++ b/src/poiupv/vistes/Principal.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.ToggleButton?>
@@ -29,14 +30,24 @@
                <children>
                   <VBox HBox.hgrow="ALWAYS">
                      <children>
-                        <Label fx:id="problema" text="label" wrapText="true">
+                        <Separator prefWidth="200.0">
+                           <VBox.margin>
+                              <Insets bottom="10.0" />
+                           </VBox.margin>
+                        </Separator>
+                        <Label fx:id="problema" ellipsisString="" text="label" wrapText="true" VBox.vgrow="ALWAYS">
                            <font>
                               <Font size="14.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="10.0" />
+                              <Insets />
                            </VBox.margin>
                         </Label>
+                        <Separator>
+                           <VBox.margin>
+                              <Insets bottom="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Separator>
                         <ListView fx:id="llistaRespostes">
                            <VBox.margin>
                               <Insets />
