--- a/src/poiupv/vistes/resultats.fxml
+++ b/src/poiupv/vistes/resultats.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.effect.DropShadow?>
@@ -12,83 +13,125 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="469.0" prefWidth="737.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.ResultatsController">
+<AnchorPane id="AnchorPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.ResultatsController">
    <children>
-      <Pane layoutX="29.0" layoutY="83.0" prefHeight="352.0" prefWidth="682.0" style="-fx-background-color: white;">
+      <HBox alignment="CENTER_LEFT" layoutY="-7.0" style="-fx-background-color: #006db5;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox prefHeight="352.0" prefWidth="682.0">
+            <Text fill="WHITE" nodeOrientation="RIGHT_TO_LEFT" strokeType="OUTSIDE" strokeWidth="0.0" text="Resultats">
+               <font>
+                  <Font name="System Bold" size="32.0" />
+               </font>
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" top="10.0" />
+               </HBox.margin>
+            </Text>
+         </children>
+      </HBox>
+      <Pane layoutX="29.0" layoutY="83.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="90.0">
+         <children>
+            <HBox alignment="CENTER">
                <children>
-                  <ListView fx:id="listSesions" prefHeight="352.0" prefWidth="355.0" />
-                  <VBox prefHeight="352.0" prefWidth="314.0">
+                  <VBox style="-fx-border-color: black;" HBox.hgrow="ALWAYS">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total:">
-                           <font>
-                              <Font name="System Bold Italic" size="18.0" />
-                           </font>
+                        <DatePicker fx:id="datePicker">
                            <VBox.margin>
-                              <Insets left="30.0" top="10.0" />
+                              <Insets bottom="10.0" left="10.0" top="10.0" />
                            </VBox.margin>
-                        </Text>
-                        <HBox prefHeight="100.0" prefWidth="200.0">
+                        </DatePicker>
+                        <ListView fx:id="listSesions" />
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER" style="-fx-border-color: black;" HBox.hgrow="ALWAYS">
+                     <children>
+                        <HBox alignment="CENTER" style="-fx-background-color: #006db5;">
+                           <children>
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Total">
+                                 <font>
+                                    <Font name="System Bold Italic" size="24.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" top="10.0" />
+                                 </HBox.margin>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" VBox.vgrow="ALWAYS">
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Encerts:">
                                  <HBox.margin>
-                                    <Insets left="20.0" top="20.0" />
+                                    <Insets />
                                  </HBox.margin>
                                  <font>
                                     <Font name="System Bold" size="18.0" />
                                  </font>
                               </Text>
-                              <Label fx:id="encerts" text="Label">
+                              <Label fx:id="encerts" alignment="CENTER" text="Label">
                                  <HBox.margin>
-                                    <Insets left="105.0" top="25.0" />
+                                    <Insets left="10.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
                               </Label>
                            </children>
+                           <VBox.margin>
+                              <Insets left="20.0" right="20.0" />
+                           </VBox.margin>
                         </HBox>
-                        <HBox prefHeight="100.0" prefWidth="200.0">
+                        <HBox alignment="CENTER_LEFT" VBox.vgrow="ALWAYS">
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Falllades:">
                                  <HBox.margin>
-                                    <Insets left="20.0" top="20.0" />
+                                    <Insets />
                                  </HBox.margin>
                                  <font>
                                     <Font name="System Bold" size="18.0" />
                                  </font>
                               </Text>
-                              <Label fx:id="fallades" text="Label">
+                              <Label fx:id="fallades" alignment="CENTER" text="Label">
                                  <HBox.margin>
-                                    <Insets left="95.0" top="25.0" />
+                                    <Insets left="10.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
                               </Label>
                            </children>
+                           <VBox.margin>
+                              <Insets left="20.0" right="20.0" />
+                           </VBox.margin>
                         </HBox>
-                        <HBox prefHeight="100.0" prefWidth="200.0">
+                        <HBox alignment="CENTER_LEFT" VBox.vgrow="ALWAYS">
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Data ultima sesió:">
                                  <HBox.margin>
-                                    <Insets left="20.0" top="20.0" />
+                                    <Insets />
                                  </HBox.margin>
                                  <font>
                                     <Font name="System Bold" size="18.0" />
                                  </font>
                               </Text>
-                              <Label fx:id="sesio" prefHeight="18.0" prefWidth="94.0" text="Label">
+                              <Label fx:id="sesio" alignment="CENTER" text="Label">
                                  <HBox.margin>
-                                    <Insets left="24.0" top="25.0" />
+                                    <Insets left="10.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
                               </Label>
                            </children>
+                           <VBox.margin>
+                              <Insets left="20.0" right="20.0" />
+                           </VBox.margin>
                         </HBox>
-                        <VBox prefHeight="71.0" prefWidth="498.0">
-                           <children>
-                              <Button mnemonicParsing="false" onAction="#tancarBoto" text="Tancar">
-                                 <VBox.margin>
-                                    <Insets left="100.0" />
-                                 </VBox.margin>
-                              </Button>
-                           </children>
-                        </VBox>
+                        <Button mnemonicParsing="false" onAction="#tancarBoto" text="Tancar">
+                           <VBox.margin>
+                              <Insets bottom="20.0" top="20.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Button>
                      </children>
                   </VBox>
                </children>
@@ -98,17 +141,5 @@
             <DropShadow />
          </effect>
       </Pane>
-      <HBox layoutY="-7.0" prefHeight="70.0" prefWidth="745.0" style="-fx-background-color: #006db5;">
-         <children>
-            <Text fill="WHITE" nodeOrientation="RIGHT_TO_LEFT" strokeType="OUTSIDE" strokeWidth="0.0" text="Resultats">
-               <font>
-                  <Font name="System Bold" size="32.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="30.0" top="15.0" />
-               </HBox.margin>
-            </Text>
-         </children>
-      </HBox>
    </children>
 </AnchorPane>
